--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
+<html lang="en"></html>
 <html>
 <head>
-    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <title>Home Page</title>
+  
 </head>
 
 <nav>
+    <a href="index.htm">Home</a>
+    <a href="definitions.htm">Definitions</a>
+    <a href="questions.htm">Questions</a>
+    <a href="contact.html">Contact</a>
+   
    
 
 </nav>
 <body>
 
-    <h1>W</h1>
-    <p>My first paragraph.</p>
-   <nav>
-       Home
-   </nav>
+    <h1>Welcome to HTML/CSS/JS and Bootstrap</h1>
+    <p></p>
+   
+  
 
 </body>
 </html>
