--- a/definitions.htm
+++ b/definitions.htm
@@ -9,18 +9,21 @@
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
    
-    <title> DEFIPage</title>
+    <title> Definition Page</title>
 </head>
 
-<h1>Definitions</h1>
-<nav>
-    <a href="index.htm">Home</a>
-    <a href="definitions.htm">Definitions</a>
-    <a href="questions.htm">Questions</a>
-    <a href="contact.html">Contact</a>
+<ul class="nav nav-pills">
+<a class="nav-item nav-link" href="index.htm">Home</a>
+    <a class="nav-item nav-link active" href="definitions.htm">Definitions</a>
+    <a class="nav-item nav-link" href="questions.htm">Questions</a>
+    <a class="nav-item nav-link ms-auto" href="contact.html">Contact</a>
+      
+  </ul>
+  
    
 </nav>
-
+<h1>Definitions</h1>
+<nav>
 <body>
     <h2>Programming Concepts</h2>
     <div class="accordion" id="accordionExample">
@@ -32,7 +35,9 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-              <strong>stronfg text.</strong> text
+              <strong>Authentication</strong> is the process by which a user, service, or app proves its identity to gain access to organizational resources, typically involving usernames, passwords, or other
+               forms of identification like biometrics or certificates issued by trusted third parties. 
+              <strong>Web Security </strong> protects networks, servers and computer systems from any infraction to the system.
             </div>
           </div>
         </div>
@@ -45,8 +50,8 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
+              <strong>Hypertext Transfer Protocol (HTTP) </strong> is a foundational protocol
+               for exchanging resources like HTML documents on the web, between a client and a web server.   </div>
           </div>
         </div>
   
@@ -58,7 +63,8 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Session management </strong> is the process used 
+              to securely handle multiple requests between the user and the web application.
             </div>
           </div>
         </div>
@@ -71,8 +77,8 @@
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
+              <strong>Stateless programming</strong> means that the program that does not store data or 
+                information about the client session.  </div>
           </div>
         </div>
       </div>
@@ -88,7 +94,9 @@
             </h2>
             <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
               <div class="accordion-body">
-                <strong>stronfg text.</strong> text
+                <strong>•	Sequence</strong> refers to the order in which instructions occur and are processed in a program.
+                <strong>• Selection </strong>determines the path a program takes during execution based on certain conditions.
+                <strong>•	Iteration </strong>involves the repeated execution of a specific section of code while the program is running.
               </div>
             </div>
           </div>
@@ -101,7 +109,8 @@
             </h2>
             <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Hypertext markup language (HTML) </strong> defines the meaning and structure of the web content and is to be displayed on a web browser.
+                <strong>Markup languages  </strong>are used to define the text document within the tag which defines the structure of web pages and also used to store and exchange data.
               </div>
             </div>
           </div>
@@ -114,8 +123,7 @@
             </h2>
             <div id="collapseSeven" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-              </div>
+                <strong>The Cascading style sheets (CSS). </strong> is a stylesheet language to display the layout and structure of web pages like HTML and XML.       </div>
             </div>
           </div>
     
@@ -127,8 +135,8 @@
             </h2>
             <div id="collapseEight" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-              </div>
+                <strong>Syntax </strong> in programming languages refers to the set of rules that dictate how statements and expressions are correctly structured using symbols, keywords, and punctuation. It defines the structure of the language, allowing
+                 programmers to communicate effectively with the computer through precise instructions.   </div>
             </div>
           </div>
         </div>
