--- a/index.htm
+++ b/index.htm
@@ -13,12 +13,14 @@
 </head>
 
 <nav>
-    <a href="index.htm">Home</a>
-    <a href="definitions.htm">Definitions</a>
-    <a href="questions.htm">Questions</a>
-    <a href="contact.html">Contact</a>
-   
-   
+    <ul class="nav nav-pills">
+        <a class="nav-item nav-link active" href="index.htm">Home</a>
+
+        <a class="nav-item nav-link" href="definitions.htm">Definitions</a>
+        <a class="nav-item nav-link"  href="questions.htm">Questions</a>
+        <a class="nav-item nav-link ms-auto" href="contact.html">Contact</a>
+  
+  </ul>
 
 </nav>
 <body>
